[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "DCSurvival"
version = "0.0.1"
description = ""
authors = [{ name = "Weijia Zhang", email = "weijia.zhang.xh@gmail.com" }]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "lifelines",
    "matplotlib",
    "numpy<=1.23.5",
    "pandas",
    "scikit_learn",
    "statsmodels",
    "torch",
    "tqdm",

]

[project.optional-dependencies]
examples = ["pycox"]
dev = ["pre-commit", "ruff"]

[tool.distutils.bdist_wheel]
universal = true

[tool.mypy]
no_implicit_optional = false

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
#   "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
#   "D",    # pydocstyle
#   "E",    # pycodestyle error
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "FLY",  # flynt
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "PD",   # pandas-vet
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
#   "PT",   # flake8-pytest-style
  "PYI",  # flakes8-pyi
  "Q",    # flake8-quotes
#   "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "TCH",  # flake8-type-checking
  "TID",  # tidy imports
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # pycodestyle warning
  "YTT",  # flake8-2020
]
lint.ignore = [
  "C408",  # Unnecessary dict call - rewrite as a literal
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D205",  # 1 blank line required between summary line and description
  "E731",  # Do not assign a lambda expression, use a def
  "PD901", # pandas-df-variable-name
  "PLR",   # pylint refactor
  "PT006", # pytest-parametrize-names-wrong-type
]
lint.pydocstyle.convention = "google"
lint.isort.known-third-party = ["wandb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
